<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2024 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/abc_dialog_title_divider_material">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="?dialogPreferredPadding"
                android:layout_marginEnd="?dialogPreferredPadding"
                android:layout_marginTop="8dp"
                android:text="@string/search_filter_type"
                android:textColor="?colorAccent"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="?dialogPreferredPadding"
                android:paddingEnd="?dialogPreferredPadding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="?dialogPreferredPadding"
                android:layout_marginEnd="?dialogPreferredPadding"
                android:layout_marginTop="8dp"
                android:text="@string/search_filter_size"
                android:textColor="?colorAccent"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/sizeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="?dialogPreferredPadding"
                android:paddingEnd="?dialogPreferredPadding" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="?dialogPreferredPadding"
                android:layout_marginEnd="?dialogPreferredPadding"
                android:layout_marginTop="8dp"
                android:text="@string/search_filter_time"
                android:textColor="?colorAccent"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/timeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="?dialogPreferredPadding"
                android:paddingEnd="?dialogPreferredPadding" />

            <CheckBox
                android:id="@+id/recursiveCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="?dialogPreferredPadding"
                android:layout_marginEnd="?dialogPreferredPadding"
                android:layout_marginTop="8dp"
                android:minHeight="@dimen/dense_single_line_list_item_height"
                android:text="@string/search_option_recursive"
                android:textAppearance="?textAppearanceListItem" />

            <CheckBox
                android:id="@+id/regexCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="?dialogPreferredPadding"
                android:layout_marginEnd="?dialogPreferredPadding"
                android:minHeight="@dimen/dense_single_line_list_item_height"
                android:text="@string/search_option_regex"
                android:textAppearance="?textAppearanceListItem" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>
